Basic tables and CRUD for PalletTruck and Wheels