@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id ("org.openjfx.javafxplugin").version("0.1.0")
 }
 
 group = 'org.example'
@@ -9,13 +11,34 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 
-    implementation("com.microsoft.sqlserver:mssql-jdbc:6.1.0.jre7")
+dependencies {
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:13.3.2.jre11-preview' // Or latest version
+
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc_auth:12.6.1.x64'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+application{
+    mainClass = 'org.example.Application'
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
+}
+
+jar{
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    manifest {
+        attributes('mainClass' : 'Application')
+    }
+    from {
+        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
+    }
 }
 
 test {
